<resources>
    <string name="app_name">Pizza Restaurant</string>
    <string name="text_intro">Restaurant Eka</string>
    <string name="store_1">Store</string>
    <string name="name_label">Your Name</string>
    <string name="next">Submit</string>
    <string name="hello">Hello, Eka</string>
    <string name="store_2">Cihampelas</string>
    <string name="store_3">Location</string>
    <string name="store_4">Find On Maps</string>
    <string name="menu">See Menus</string>
    <string name="paperoni">Pepperoni Pizza Cocok bagi anda yang ingin merasakan pizza original dengan taburan keju dan daging asap yang lezat</string>
    <string name="spaghetti">Spaghetti Cocok bagi anda yang ingin merasakan spaghetti original dengan bumbu yang oriental</string>
    <string name="burger">Burger Cocok bagi anda yang ingin merasakan kelembutan burger berlapiskan keju, sayuran dan daging yang tebal</string>
    <string name="steak">Steak Cocok bagi anda yang ingin merasakan lezatnya daging steak dipadukan dengan kentang yang lezat</string>
    <string name="lead">Pepperoni Pizza</string>
    <string name="harga">Price: Rp 66.000,00</string>
    <string name="desk">Pepperoni pizza adalah pizza yang memiliki  topping daging pepperoni sapi asli. Di Italia, pepperoni disebut salame piccante (salami panas). Biasa menjadi bahan baku pizza di Amerika Serikat, yang sering mewakili 30% pelengkap. Pizza ini cocok untuk santap siang ataupun malam anda</string>
    <string name="order">Order Now</string>
    <string name="back">Back</string>
    <string name="orederdet">Order Detail</string>
    <string name="ordered">"
        Eka
        Store: Cihampelas
        Kue Kastengel sudah dipesan "</string>
    <string name="kirimdet">Pengiriman</string>
    <string name="ambil">Ambil Sendiri</string>
    <string name="kirim">Fast Delivery (minimal 30 menit sampai)</string>
    <string name="done">done</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="order_message">"Terima kasih Eka sudah memesan  ditoko kami, pesanan Pepperoni Pizza  anda dikirim menggunakan Fast Delivery "</string>
    <string-array name="spin_1">
        <item>Bandung</item>
        <item>Bogor</item>
        <item>Jakarta</item>
        <item>Depok</item>
        <item>Bekasi</item>
         
    </string-array>
</resources>