<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_2">

    <TextView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#F3EFEF"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="108dp"
        android:layout_height="34dp"
        android:text="@string/hello"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="25dp"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="50dp"/>

    <ImageButton
        android:layout_width="62dp"
        android:layout_height="57dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="13dp"
        android:onClick="kembali"
        android:background="@drawable/person"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navbar"
        app:srcCompat="@drawable/main1" />

    <TextView
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/store_1"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image" />

    <TextView
        android:id="@+id/store2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/store_2"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image" />

    <TextView
        android:id="@+id/store3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/store_3"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store" />

    <TextView
        android:id="@+id/store4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/store_4"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store2" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_action_name"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="277dp"
        android:layout_height="40dp"
        android:text="@string/menu"
        android:layout_marginTop="5dp"
        android:onClick="tampilan_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/store4"
        app:layout_constraintVertical_bias="0.093"
        tools:ignore="UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>