<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_3">

    <TextView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#F3EFEF"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="108dp"
        android:layout_height="34dp"
        android:text="@string/hello"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="25dp"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="50dp"/>

    <ImageButton
        android:layout_width="62dp"
        android:layout_height="57dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="13dp"
        android:background="@drawable/person"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/paperoni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navbar"
        app:srcCompat="@drawable/papperoni" />

    <ImageView
        android:id="@+id/spagheti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paperoni"
        app:srcCompat="@drawable/spaghetti" />

    <ImageView
        android:id="@+id/burger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spagheti"
        app:srcCompat="@drawable/burger" />

    <ImageView
        android:id="@+id/steak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/burger"
        app:srcCompat="@drawable/steak_1" />

    <TextView
        android:id="@+id/paperoni_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_wide"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        android:text="@string/paperoni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paperoni"
        app:layout_constraintTop_toTopOf="@+id/paperoni" />

    <TextView
        android:id="@+id/spagheti_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/spaghetti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spagheti"
        app:layout_constraintTop_toTopOf="@+id/paperoni_name" />

    <TextView
        android:id="@+id/burger_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/burger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/burger"
        app:layout_constraintTop_toTopOf="@+id/burger" />

    <TextView
        android:id="@+id/steak_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/steak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/steak"
        app:layout_constraintTop_toTopOf="@+id/steak" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:srcCompat="@drawable/ic_action_name1"
        tools:layout_editor_absoluteX="343dp"
        tools:layout_editor_absoluteY="651dp"
        tools:ignore="MissingConstraints"
        android:onClick="Tampilan_4"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>