<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:text="@string/text_intro"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="269dp"
        android:layout_height="256dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first"
        app:srcCompat="@drawable/logo_1" />


    <TextView
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/store_1"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Spinner
        android:id="@+id/spin_label_1"
        android:layout_width="277dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:entries="@array/spin_1"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store" />

    <EditText
        android:id="@+id/label_1"
        android:layout_width="277dp"
        android:layout_height="40dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-84dp"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_label_1"
        />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/name_label"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_1" />
    <EditText
        android:id="@+id/label_2"
        android:layout_width="277dp"
        android:layout_height="40dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-84dp"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label"/>

    <Button
        android:id="@+id/button_first"
        android:layout_width="277dp"
        android:layout_height="40dp"
        android:text="@string/next"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_2"
        app:layout_constraintVertical_bias="0.093"
        android:onClick="Tampilan_2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>